--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -1,16 +1,3 @@
-#wpwrap {
-	background-color: #161616;
-}
-
-#adminmenuback, #adminmenuwrap, .wp-submenu, #adminmenu, #wpadminbar {
-	background-color: #000000 !important;
-}
-
-#adminmenu .current a
-{
-	background-color: #0B3E6F !important;
-}
-
 .ui-widget {
 	font-size: 1.1em;
 	line-height: 1.2em;
@@ -20,12 +7,17 @@
 {
 	font-size: 90%;
 }
+
+.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
+  padding: .4em 1em;
+}
+
 ul#errors-bar {
-    color: yellow;
-    font-size: 17px;
-    padding: 18px 0px;
-    width: 96%;
-    border-left: 6px solid red;
+  color: yellow;
+  font-size: 17px;
+  padding: 18px 0px;
+  width: 96%;
+  border-left: 6px solid red;
 }
 ul#errors-bar li {
   margin-left: 15px;
@@ -35,7 +27,6 @@ ul#errors-bar li {
 	
 div#wcfe-body {
 	margin-top: 19px;
-	color: white;
 }
 .wcfe-vars-group {
 	margin-left: 5px;
@@ -80,25 +71,13 @@ fieldset strong {
 }
 
 .field-row label, .checkbox-row label {
-	width : 244px;
-	display: inline-block
+  width: 244px;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 13px;
 }
 
-a.secure-key-generator-key {
-	display: inline-block;
-	width: 22px;
-	position: absolute;
-	height: 22px;
-	font-size: 0;
-	margin: 3px 0 0 5px;
-	background-image: url('Images/kgpg_key1.png');
-}
 #wcfe-body input[type="text"].secure-key-field {width: 540px;}
-
-#wcfe-body input {
-	background-color: transparent;
-	color: white;
-}
 
 #wcfe-options-tab {
 	width: 98%;
@@ -115,20 +94,7 @@ a.secure-key-generator-key {
 }
 
 div#wcfe-confirm-save-message-dialog {
-    color: yellow;
-    padding: 10px 10px;
-}
-
-#TB_window {
-background-color: #000000;
-    -webkit-box-shadow: 0 3px 6px rgba(253, 254, 255, 0.3);
-    box-shadow: 0 3px 6px rgba(253, 254, 255, 0.3);
-}
-
-#TB_ajaxWindowTitle {
-    background-color: #FFFFFF;
-    color: red;
-    font-size: 26px;
+  padding: 10px 10px;
 }
 
 div#wcfe-confirm-save-message-dialog p {
@@ -157,9 +123,14 @@ div#wcfe-confirm-save-message-dialog p {
 
 #wcfe-update-config-file-warning-notes ul.done-button-note
 {
-  background-color: #723030;
+  background-color: #DBDBDB;
   width: 404px;
   padding: 14px 10px 9px 26px;
+}
+
+#wcfe-update-config-file, #wcfe-update-done 
+{
+	padding: 2px 21px;
 }
 
 #wcfe-thickbox-errors-list {
@@ -182,11 +153,6 @@ div#wcfe-confirm-save-message-dialog p {
 #wcfe-restore-section a:hover {
 	color: #75CDF8;
 }
-#TB_overlay {
-	background-color: black !important;
-  opacity: 1 !important;
-  filter: alpha(opacity=100) !important;
-}
 
 #wcfe-restore-note {
   padding: 10px 10px;
@@ -205,18 +171,6 @@ p.wcfe-restore-parameters {
 	height: 133px;
 	border: none;
 }
-
-#wcfe-update-config-file, #wcfe-update-done {
-    background-color: transparent;
-    color: #EF160A;
-    padding: 1px 27px 4px;
-    border-color: #685553;
-}
-
-#wcfe-update-config-file:disabled, #wcfe-update-done:disabled
-{
-	color: #4B4545;
-}
 #wcfe-update-config-file
 {
 	margin-right: 5px;
@@ -234,24 +188,20 @@ p.wcfe-restore-parameters {
 }
 
 ul.wcfe-thickbox-errors-list {
-color: #FFB300;
-    background-color: #131111;
-    display: none;
-    height: 67px;
-    padding: 10px 0 0 10px;
-    overflow: auto;
-    margin: 0;
+	color: #8BDE0B;
+	background-color: #102C04;
+	display: none;
+	padding: 10px 0 0 10px;
+	overflow: auto;
+	margin: 0;
+	border: 3px solid #BAD2B8;
 }
 
 .wcfe-task-button {
-    font-size: 15px;
-    font-family: Arial,sans-serif;
+    font-size: 13px;
     padding: 3px 28px;
-    border-color: #173D61;
-    background-color: #0B3E6F !important;
     float: left;
     margin-right: 5px;
-    color: white;
     margin-top: 19px;
 }
 
@@ -271,12 +221,19 @@ color: #FFB300;
 
 .help-list 
 {
-	color: yellow;
 	font-size: 15px;
+  background-color: #ECEBEB;
+  padding: 10px 10px;
+  width: 100%;
 }
 td.help-label-text {
-    width: 40%;
-    color: white;
+  width: 40%;
+  color: #121312;
+  font-style: italic;
+}
+
+.help-list td {
+	background-color: white;
 }
 
 .ajax-loader-image
@@ -324,23 +281,21 @@ td.help-label-text {
 }
 
 .simple-sub-container {
-    background-color: #212324;
-    padding: 10px 10px;
-    margin-bottom: 10px;
+  padding: 10px 10px;
+  margin-bottom: 10px;
+  border: 1px dashed #BCB1B1;
 }
 
 #wcfe-config-form-main-menu
 {
-	width: 216px;
-	font-size: 1.0em;
-	display: none;
-	background: #161616;
+  width: 216px;
+  font-size: 1.0em;
+  display: none;
 }
 #wcfe-config-form-main-menu ul
 {
     width: 200px;
-    box-shadow: #0B3E6F 1px 1px 1px 0px;
-    background: #0B3E6F;
+    box-shadow: #777879 1px 1px 1px 0px;
     background-image: none;
     border: none;
 }
@@ -353,27 +308,20 @@ td.help-label-text {
 #wcfe-config-form-main-menu li.ui-menu-item 
 {
 	padding: 2px 12px !important;
-	background-color: #0B3E6F;
-}
-
-.ui-menu-divider
-{
-    background-color: #0B3E6F;
-    border-color: #115BA2;
 }
 
 #wcfe-status-bar
 {
-    height: 19px;
-    color: yellow;
-    position: relative;
-    top: 0px;
-    background-color: #151515;
-    font-size: 11px;
-    font-family: monospace;
-    padding: 0 10px 0 0;
-    width: 98% !important;
-    border-radius: 20px;
+  height: 19px;
+  position: relative;
+  color: green;
+  top: 0px;
+  background-color: #F9F3F3;
+  font-size: 11px;
+  font-family: monospace;
+  padding: 0 10px 0 0;
+  width: 98% !important;
+  border-radius: 20px;
 }
 
 #wcfe-status-bar span.status-text
@@ -384,14 +332,13 @@ td.help-label-text {
 
 #wcfe-status-bar span.log-text {
     color: red;
-    /* float: right; */
     padding-left: 21px;
-    border-left: 2px solid #292626;
+    border-left: 2px solid #DCDCDC;
     position: relative;
 }
 #wcfe-dmm-profiles-active-profile, #wcfe-dmm-profiles-active-profile li
 {
-	color: gray;
+	color: #C4BEBE;
 }
 
 #wcfe-support-plugin-dialog-popup
@@ -400,38 +347,36 @@ td.help-label-text {
 }
 #wcfe-support-plugin-dialog p
 {
-  color: white;
   font-size: 22px;
   font-family: monospace;
-}
-#wcfe-support-plugin-dialog input
-{
-	background-color: #0E7CA4;
-	color: #FFFFFF;
-	border-color: #1273BC;	
 }
 
 .wcfe-ballon
 {
-display: none;
+    display: none;
     position: fixed;
-    background-color: transparent;
-    color: white;
+    color: black;
     width: 311px;
-    height: 200px;
+    height: 141px;
     padding: 10px 8px;
     border-radius: 12px;
-    box-shadow: #0B3E6F -1px 1px 12px 0px;
-    background-color: #111111;
+    box-shadow: #000000 -1px 1px 12px 0px;
+    background-color: #FFFFFF;
     font-family: monospace;
   
 }
 .wcfe-ballon h2
 {
-    color: red;
+    color: #FF0E0E;
     font-size: 20px;
     margin-left: 6px;
     margin: 0;
+}
+.wcfe-ballon#wcfe-active-profile-warning p {
+    line-height: 15px;
+    font-style: italic;
+    font-size: 14px;
+    font-family: sans-serif;
 }
 
 input[type="text"].typeinteger, #MaintenanceOptionsTab input[type="text"]
@@ -460,22 +405,15 @@ input[type="text"].typeinteger, #MaintenanceOptionsTab input[type="text"]
 }
 
 table#wcfe-info-paths-table {
-    /* background-color: navy; */
-    color: white;
-    width: 100%;
-    margin: 26px 0 0 0;
+  width: 100%;
+  margin: 26px 0 0 0;
 }
 table#wcfe-info-paths-table th {
-    background-color: #B23232;
-}
-table#wcfe-info-paths-table td {
-    background-color: #000;
+    background-color: #E0DCDC;
 }
 table#wcfe-info-paths-table input {
-    width: 99%;
-    background-color: transparent;
-    color: white;
-    border-color: #173747
+	width: 99%;
+  background-color: transparent;
 }
 
 .wcfe-auto-path-list
@@ -504,8 +442,9 @@ table#wcfe-info-paths-table input {
 
 .beta-feature
 {
-	color: #9BFF00;
-	font-size: 96%;
+    color: #14BB0B;
+    font-size: 89%;
+    font-weight: bold;
 }
 
 /* PREVIEW */
@@ -542,7 +481,7 @@ table#wcfe-info-paths-table input {
 	}
 	
 	.field-row label, .checkbox-row label {
-	    width: 120px;
+	    width: 129px;
 	}
 	
 }
