Adding MCE Editor generic sysfilters with Fields Core updated to fit the needs

--- a/Modules/SysFilters/View/SysFiltersDashboard/Media/Index.css
+++ b/Modules/SysFilters/View/SysFiltersDashboard/Media/Index.css
@@ -49,3 +49,9 @@ a.toggle-advanced-options-panel {
 	width: 300px;
 	height: 130px;
 }
+
+.compound-field {
+  background-color: #F5F5F5;
+  display: inline-block;
+  padding: 10px 10px;
+}
