--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -521,6 +521,11 @@ div#subcontainer-imagesEditor strong.title {
 	font-size: 18px;
 }
 
+.support-us-link {
+    float: right;
+    margin-top: -32px;
+    margin-right: 34px;
+}
 
 
 @media only screen and (max-width: 1080px) and (orientation: portrait),
