--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -491,6 +491,16 @@ table#wcfe-info-paths-table input {
     font-weight: bold;
 }
 
+#wcfe-systemparams-note
+{
+    font-weight: bold;
+    font-size: 14px;
+    padding: 10px 10px;
+    background-color: white;
+    color: red;
+    margin-bottom: 6px;
+}
+
 div#subcontainer-imagesEditor strong.title {
     background-color: #eee;
     padding: 10px 4px;
